--- a/.github/workflows/eco-news.yml
+++ b/.github/workflows/eco-news.yml
@@ -26,4 +26,5 @@ jobs:
       - name: Run bot
         env:
           DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}
+          CHANNEL_ID: ${{ secrets.CHANNEL_ID }}
         run: python main.py
